# syft-priority-sync

./: README.md  pyproject.toml
src/syft_priority_sync/: __init__.py  api.py  auto_install.py  client.py  models.py  server.py  watcher.py
syft-priority-sync-app/: main.py  run.sh
tests/: __init__.py  test_api.py  test_models.py
